first pass towards rekordPromise
